added navbar banner and many more

--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biker Zone with DaisyUI and Tailwind</title>
+    <!-- daisyUi and tailwind cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google font cdn  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Manrope:wght@200..800&family=Playwrite+SK:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- font awosome -->
+    <script src="https://kit.fontawesome.com/356591c159.js" crossorigin="anonymous"></script>
+    <style>
+        .poppins-font{
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
+
 </head>
-<body>
-    <header class="container mx-auto">
-       <nav>
-        <div class="navbar bg-base-100">
-            <div class="navbar-start">
+<body class="poppins-font">
+    <!-- header section start -->
+    <header class="mx-auto bg-[#264653] md:h-[550px]">
+       <nav class="container mx-auto">
+        <div class="navbar">
+            <div class="flex-1">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                   <svg
@@ -29,44 +43,59 @@
                 </div>
                 <ul
                   tabindex="0"
-                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                  <li><a>Item 1</a></li>
-                  <li>
-                    <a>Parent</a>
-                    <ul class="p-2">
-                      <li><a>Submenu 1</a></li>
-                      <li><a>Submenu 2</a></li>
-                    </ul>
-                  </li>
-                  <li><a>Item 3</a></li>
+                  class="menu menu-sm dropdown-content bg-white text-black rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                  <li><a>Home</a></li>
+                  <li><a>Shop</a></li>
+                  <li><a>News</a></li>
+                  <li><a>Contact</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-xl">daisyUI</a>
+              <a class="text-4xl text-white pl-5 font-bold">Ride On</a>
             </div>
-            <div class="navbar-center hidden lg:flex">
-              <ul class="menu menu-horizontal px-1">
-                <li><a>Item 1</a></li>
-                <li>
-                  <details>
-                    <summary>Parent</summary>
-                    <ul class="p-2">
-                      <li><a>Submenu 1</a></li>
-                      <li><a>Submenu 2</a></li>
-                    </ul>
-                  </details>
-                </li>
-                <li><a>Item 3</a></li>
+            <div class="navbar-center hidden lg:flex ">
+              <ul class="menu menu-horizontal px-1 text-white">
+                <li><a>Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>News</a></li>
+                <li><a>Contact</a></li>
               </ul>
             </div>
-            <div class="navbar-end">
-              <a class="btn">Button</a>
+            <div class="">
+              <a class="btn bg-[#E76F51] text-white">Button</a>
             </div>
           </div>
        </nav>
+       <!-- header section  -->
+        <div class="md:flex container mx-auto space-x-7">
+            <!-- text section  -->
+             <div class=" md:w-1/2 pl-7 md:pt-36 pt-16">
+                <p class="text-gray-300 text-xs mb-5">Computer-controlled digital transistorized with electronic advance</p>
+                <h1 class="md:text-5xl text-4xl text-white font-bold mb-5">Honda CBR 300R</h1>
+                <p class="text-gray-200 mb-5">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn bg-[#E76F51] px-9 text-white">Purchase</button>
+             </div>
+             <!-- image section  -->
+              <div>
+                <img class="md:w[552px] h-[447px] w[321px] h[250px]" src="./images/slider/bike3.png" alt="">
+              </div>
+        </div>
     </header>
-
-    <main>
-
+    <!-- main section start  -->
+    <main class="container mx-auto">
+        <!-- bike collection section  -->
+      <div>
+        <div class="text-center mx-auto my-12">
+            <h1 class=" md:text-5xl text-3xl mb-5">Fetured Bikes In This Year</h1>
+            <small class="text-red-600 border border-red-600">Best bike collection</small>
+            <!-- card section  -->
+                <div class="md:flex ml-9 justify-evenly pt-7 space-y-7">
+                    <img src="./images/others/feature-bike.png" alt="">
+                    <img src="./images/others/feature-bike.png" alt="">
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+             
+           </div>
+      </div>
     </main>
 
     <footer>
